# Lackadaisical-Ancient-Script-Copilot

./: AncientScriptCopilot.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SUPPORT.md  UDM20-TT_v1.0_Tartaria_Methodology.md  UNIVERSAL_DECIPHERMENT_METHODOLOGY_V20.md  ancient-scripts-complete.css  ancient_scripts_attribution_license_v1.md  fonts.css  ghost_license_v_1.md  start-copilot.bat  stop-copilot.bat
decipher-copilot/: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
decipher-copilot/core/: CMakeLists.txt
decipher-copilot/datasets/: BYBLOS_LEXICON_MASTER_v5_2025-11-11.json  QUALITY_NOTES.md  akkadian_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  amharic_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  amharic_lexicon_MASTER_2026-04-29.json  arabic_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  arabic_lexicon_MASTER_2026-04-29.json  armenian_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  armenian_lexicon_MASTER_2026-04-29.json  attested_resource_catalog.json  avestan_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  avestan_lexicon_MASTER_2026-04-29.json  brahmi_cultural_contexts.json  brahmi_lexicon.json  brahmi_unicode_mappings.json  burmese_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  burmese_lexicon_MASTER_2026-04-29.json  chinese_classical_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  chinese_classical_lexicon_MASTER_2026-04-29.json  cretan_hieroglyphs_script_lexicon_2025-09-11.json  dravidian_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  elamite_lexicon_MASTER_2026-04-29.json  elder_futhark_lexicon.json  etruscan_lexicon_MASTER_2026-04-29.json  gardiner_signs_hieroglyphs.json  gardiner_signs_hieroglyphs_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  geez_lexicon.json  georgian_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  georgian_lexicon_MASTER_2026-04-29.json  glagolitic_lexicon.json  glagolitic_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  glagolitic_signs.json  glyph_lexicon_maya.csv  gothic_lexicon.json  gothic_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  greek_lexicon.csv  greek_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  hebrew_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  hebrew_lexicon_MASTER_2026-04-29.json  hittite_lexicon_EXPANDED_OPERATOR_SPECTRE_2026-05-01.json  (+63 more)
decipher-copilot/docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  DECIPHERMENT_METHODS.md  DEVELOPER_GUIDE.md  OLLAMA_NOTES.md  SECURITY.md  SYSTEM_TEST_REPORT.md  USER_GUIDE.md
decipher-copilot/scripts/: Modelfile.decipher-research  (+4 more)
(+172 files in other folders)
